--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/DID/Directives/Templates/DIDTileRuntimeSettings.html
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/DID/Directives/Templates/DIDTileRuntimeSettings.html
@@ -4,7 +4,7 @@
                  on-ready="onGridReady"
                  dataretrievalfunction="dataRetrievalFunction"
                  menuactions="menuActions"
-                 idfield="AccountName" enableautoexport="true">
+                 idfield="AccountName" enableautoexport="true" normalcell>
         <vr-datagridcolumn headertext="'DIDs'" type="'Text'" field="'Description'">  </vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Account Name'" type="'Text'" field="'AccountName'"></vr-datagridcolumn>
       
