Computed the BED of the corrected rates that result from the application of a rate bulk action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43299

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
@@ -14,9 +14,16 @@
                     <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
                         <vr-textbox type="number"
                                     value="dataItem.correctedRate"
+                                    onblurtextbox="viewScope.scopeModel.calculateCorrectedRateBED(dataItem)"
                                     decimalprecision="{{viewScope.scopeModel.longPrecision}}"
-                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)">
+                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)"
+                                    tonextinput>
                         </vr-textbox>
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'BED'" disablesorting>
+                        <vr-span vr-disabled="true">
+                            <vr-datetimepicker type="date" value="dataItem.correctedRateBED"></vr-datetimepicker>
+                        </vr-span>
                     </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
@@ -37,9 +44,16 @@
                     <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
                         <vr-textbox type="number"
                                     value="dataItem.correctedRate"
+                                    onblurtextbox="viewScope.scopeModel.calculateCorrectedRateBED(dataItem)"
                                     decimalprecision="{{viewScope.scopeModel.longPrecision}}"
-                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)">
+                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)"
+                                    tonextinput>
                         </vr-textbox>
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'BED'" disablesorting>
+                        <vr-span vr-disabled="true">
+                            <vr-datetimepicker type="date" value="dataItem.correctedRateBED"></vr-datetimepicker>
+                        </vr-span>
                     </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
@@ -62,9 +76,16 @@
                     <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
                         <vr-textbox type="number"
                                     value="dataItem.correctedRate"
+                                    onblurtextbox="viewScope.scopeModel.calculateCorrectedRateBED(dataItem)"
                                     decimalprecision="{{viewScope.scopeModel.longPrecision}}"
-                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)">
+                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)"
+                                    tonextinput>
                         </vr-textbox>
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'BED'" disablesorting>
+                        <vr-span vr-disabled="true">
+                            <vr-datetimepicker type="date" value="dataItem.correctedRateBED"></vr-datetimepicker>
+                        </vr-span>
                     </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
@@ -86,9 +107,16 @@
                     <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
                         <vr-textbox type="number"
                                     value="dataItem.correctedRate"
+                                    onblurtextbox="viewScope.scopeModel.calculateCorrectedRateBED(dataItem)"
                                     decimalprecision="{{viewScope.scopeModel.longPrecision}}"
-                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)">
+                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)"
+                                    tonextinput>
                         </vr-textbox>
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'BED'" disablesorting>
+                        <vr-span vr-disabled="true">
+                            <vr-datetimepicker type="date" value="dataItem.correctedRateBED"></vr-datetimepicker>
+                        </vr-span>
                     </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
