Update MultiNet COnvertors
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43319

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Templates/AccountConvertorEditor.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Templates/AccountConvertorEditor.html
@@ -48,6 +48,9 @@
         <vr-textbox value="scopeModel.cNICColumnName" label="CNIC Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
+        <vr-textbox value="scopeModel.cNICExpiryDateColumnName" label="CNIC Expiry Date Column Name" isrequired="true"></vr-textbox>
+    </vr-columns>
+    <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.currencyIdColumnName" label="Currency Id Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
@@ -58,6 +61,9 @@
     </vr-columns>
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.billingPeriodColumnName" label="Billing Period Column Name" isrequired="true"></vr-textbox>
+    </vr-columns>
+    <vr-columns width="1/3row">
+        <vr-textbox value="scopeModel.accountContractID" label="Account Contract Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
 </vr-section>
 <vr-section header="Address Columns" collapsible>
