--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/User/Templates/UserConvertorEditor.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/User/Templates/UserConvertorEditor.html
@@ -28,7 +28,7 @@
         <vr-textbox value="scopeModel.accountIdColumnName" label="Account Id Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.subscriberIdColumnName" label="Subscriber Id Column Name" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.subscriberIdColumnName" label="User Id Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.nameColumnName" label="User Name Column Name" isrequired="true"></vr-textbox>
