--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Customer/Templates/CustomerConvertorEditor.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Customer/Templates/CustomerConvertorEditor.html
@@ -42,13 +42,14 @@
         <vr-textbox value="scopeModel.cNICColumnName" label="CNIC Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
+        <vr-textbox value="scopeModel.cNICExpiryDateColumnName" label="CNIC Expiry Date Column Name" isrequired="true"></vr-textbox>
+    </vr-columns>
+
+    <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.currencyIdColumnName" label="Currency Id Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.nTNColumnName" label="NTN Column Name" isrequired="true"></vr-textbox>
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.dueDateColumnName" label="Due Date Column Name" isrequired="true"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.billingPeriodColumnName" label="Billing Period Column Name" isrequired="true"></vr-textbox>
