Implementing change status after provisioning
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43341

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/BPAccountAction/MainExtensions/Templates/RegularActionBPDefinitionSettingsTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/BPAccountAction/MainExtensions/Templates/RegularActionBPDefinitionSettingsTemplate.html
@@ -4,7 +4,7 @@
     </vr-tab>
     <vr-tab header="'Settings'">
         <vr-row>
-            <retail-be-statusdefinition-selector on-ready="scopeModel.onStatusDefinitionSelectorReady" normal-col-num="6" customlabel="New Status" ></retail-be-statusdefinition-selector>
+            <retail-be-actionbpdefinition-provisionpostaction on-ready="scopeModel.onPostActionDirectiveReady" normal-col-num="6"></retail-be-actionbpdefinition-provisionpostaction>
         </vr-row>
     </vr-tab>
 </vr-tabs>
