--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/BPAccountAction/MainExtensions/Templates/RegularActionBPSettingsTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/BPAccountAction/MainExtensions/Templates/RegularActionBPSettingsTemplate.html
@@ -4,6 +4,12 @@
             <span ng-if="scopeModel.selectedExtensionConfig  != undefined">
                 <vr-directivewrapper directive="scopeModel.selectedExtensionConfig.RuntimeEditor" on-ready="scopeModel.onProvisionerRuntimeSettingReady" isrequired="true"></vr-directivewrapper>
             </span>
+            <vr-row ng-if="scopeModel.postActionRuntimeDirective  != undefined">
+                <vr-section header="'Post Action'">
+                    <vr-directivewrapper directive="scopeModel.postActionRuntimeDirective" on-ready="scopeModel.onProvisionerPostActionRuntimeReady" isrequired="true"></vr-directivewrapper>
+                </vr-section>
+            </vr-row>
+    
         </vr-tab>
     </vr-tabs>
 </vr-row>
