Implement CodeChangeType and RateChangeType
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43343

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PriceListSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PriceListSettingsTemplate.html
@@ -33,3 +33,17 @@
                                                 isrequired="ctrl.isCompressPriceListFileRequired">
     </vr-whs-salepricelist-compressfile-selector>
 </vr-row>
+<vr-row>
+    <vr-columns width="1/2row">
+        <vr-whs-be-ratechangetypesettings-grid on-ready="ctrl.onRateChangeTypeSettingsGridReady"
+                                               ng-if="ctrl.showRateChangeTypeSettingsGrid">
+        </vr-whs-be-ratechangetypesettings-grid>
+    </vr-columns>
+
+    <vr-columns width="1/2row">
+        <vr-whs-be-codechangetypesettings-grid on-ready="ctrl.onCodeChangeTypeSettingsGridReady"
+                                               ng-if="ctrl.showCodeChangeTypeSettingsGrid"
+                                               is-required="ture">
+        </vr-whs-be-codechangetypesettings-grid>
+    </vr-columns>
+</vr-row>
