--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/CodeChangeTypeSettingsGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/CodeChangeTypeSettingsGridTemplate.html
@@ -1,1 +1,9 @@
-﻿
+﻿<vr-datagrid on-ready="scopeModel.onGridReady"
+             datasource="scopeModel.gridData"
+             dataretrievalfunction="scopeModel.dataRetrievalFunction"
+             is-required="ture">
+    <vr-datagridcolumn headertext="'Code Change Type'" field="'CodeChangeType.label'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Descriptions'" field="'CodeChangeTypeDescription'" is-required="ture">
+        <vr-textbox type="text" value="dataItem.CodeChangeTypeDescription" is-required="ture"></vr-textbox>
+    </vr-datagridcolumn>
+</vr-datagrid>
