--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/ExportRatesAction/Templates/ExportRatesActionSettingsTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/ExportRatesAction/Templates/ExportRatesActionSettingsTemplate.html
@@ -1,1 +1,11 @@
-﻿
+﻿<vr-tabs>
+    <vr-tab header="'Security'">
+        <vr-row>
+            <vr-columns width="fullrow">
+                <vr-section header="View Log">
+                    <vr-sec-requiredpermission-grid on-ready="scopeModel.onViewLogRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                </vr-section>
+            </vr-columns>
+        </vr-row>
+    </vr-tab>
+</vr-tabs>
