--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/RateChangeTypeSettingsGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/RateChangeTypeSettingsGridTemplate.html
@@ -3,6 +3,6 @@
              dataretrievalfunction="scopeModel.dataRetrievalFunction">
     <vr-datagridcolumn headertext="'Rate Change Type'" field="'RateChangeType.description'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Descriptions'" field="'RateChangeTypeDescription'">
-        <vr-textbox type="text" value="dataItem.RateChangeTypeDescription"></vr-textbox>
+        <vr-textbox type="text" value="dataItem.RateChangeTypeDescription" isrequired={{scopeModel.isrequired}}></vr-textbox>
     </vr-datagridcolumn>
 </vr-datagrid>
