--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/SupplierPriceListPreviewSection/Templates/SupplierPriceListPreviewSectionTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/SupplierPriceListPreviewSection/Templates/SupplierPriceListPreviewSectionTemplate.html
@@ -1,6 +1,8 @@
 ﻿<vr-form name="formSellNewZones">
     <vr-tabs>
-
+        <vr-tab header="'Summary'">
+            <whs-spl-supplierpricelistpreview-summary on-ready="onSupplierPricelistPreviewSummaryReady"></whs-spl-supplierpricelistpreview-summary>
+        </vr-tab>
         <vr-tab header="'Preview Data'">
             <vr-row ng-hide="filterSectionCollapsed">
                 <span>
