--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/SupplierPricelistPreviewSummary/Templates/SupplierPricelistPreviewSummary.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/SupplierPricelistPreviewSummary/Templates/SupplierPricelistPreviewSummary.html
@@ -1,1 +1,71 @@
-﻿
+﻿<vr-row>
+
+    <vr-columns width="1/4row">
+        <vr-section title="Rate Changes">
+            <vr-row>
+                <vr-columns width="1/2row">
+                    <vr-label>New: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfNewRates}}</vr-label>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-label>Increases: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfIncreasedRates}}</vr-label>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-label>Decreases: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfDecreasedRates}}</vr-label>
+                </vr-columns>
+            </vr-row>
+        </vr-section>
+    </vr-columns>
+    <vr-columns width="1/4row">
+
+        <vr-section title="Zone Changes">
+            <vr-row>
+                <vr-columns width="1/2row">
+                    <vr-label>New: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfNewZones}}</vr-label>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-label>Renamed: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfRenamedZones}}</vr-label>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-label>Closed: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfClosedZones}}</vr-label>
+                </vr-columns>
+            </vr-row>
+        </vr-section>
+    </vr-columns>
+
+    <vr-columns width="1/4row">
+        <vr-section title="Code Changes">
+            <vr-row>
+                <vr-columns width="1/2row">
+                    <vr-label>New: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfNewCodes}}</vr-label>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-label>Moved: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfMovedCodes}}</vr-label>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-label>Closed: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfClosedCodes}}</vr-label>
+                </vr-columns>
+            </vr-row>
+        </vr-section>
+    </vr-columns>
+    <vr-columns width="1/4row">
+
+        <vr-section title="Service Changes">
+            <vr-row>
+                <vr-columns width="fullrow">
+                    <vr-label>Zone With Changes: </vr-label>
+                    <vr-label isvalue>{{scopeModel.numberOfZonesWithChangeServices}}</vr-label>
+                </vr-columns>
+            </vr-row>
+        </vr-section>
+    </vr-columns>
+
+</vr-row>
