add vr-choices disabled option
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43370

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -2210,7 +2210,10 @@ vr-switch[class*="divDisabled"] .switch {
 .vr-choices-filter {
     margin: 0px 3px;
 }
-
+.vr-choices-disabled label{
+    color:#aaa;
+    cursor:not-allowed !important;
+}
 /**************END VR-TABS*********/
 
 
