fix required for code and rate change type settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43376

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/CodeChangeTypeSettingsGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/CodeChangeTypeSettingsGridTemplate.html
@@ -3,6 +3,6 @@
              dataretrievalfunction="scopeModel.dataRetrievalFunction">
     <vr-datagridcolumn headertext="'Code Change Type'" field="'CodeChangeType.label'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Descriptions'" field="'CodeChangeTypeDescription'">
-        <vr-textbox type="text" value="dataItem.CodeChangeTypeDescription" isrequired={{scopeModel.isrequired}}></vr-textbox>
+        <vr-textbox type="text" value="dataItem.CodeChangeTypeDescription" isrequired="dataItem.isrequired"></vr-textbox>
     </vr-datagridcolumn>
 </vr-datagrid>
