--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PriceListSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PriceListSettingsTemplate.html
@@ -44,7 +44,7 @@
     <vr-columns width="1/2row">
         <vr-whs-be-codechangetypesettings-grid on-ready="ctrl.onCodeChangeTypeSettingsGridReady"
                                                ng-if="ctrl.showCodeChangeTypeSettingsGrid"
-                                               isrequired=ctrl.isCodeChangeTypeSettingsRequired>
+                                               isrequired="ctrl.isCodeChangeTypeSettingsRequired">
         </vr-whs-be-codechangetypesettings-grid>
     </vr-columns>
 </vr-row>
