Implementing updatestatuses and fixing issue in provisioning
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43386

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/ProvisionPostAction/Templates/RevertStatusDefinitionPostActionTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/ProvisionPostAction/Templates/RevertStatusDefinitionPostActionTemplate.html
@@ -1,3 +1,3 @@
 ﻿<vr-row>
-    <vr-common-statusdefinition-selector on-ready="scopeModel.onStatusDefinitionSelectorReady" normal-col-num="6" customlabel="Revert to status" isrequired="true"></vr-common-statusdefinition-selector>
+    <vr-common-statusdefinition-selector on-ready="scopeModel.onStatusDefinitionSelectorReady" normal-col-num="6" customlabel="Revert From Status" isrequired="true"></vr-common-statusdefinition-selector>
 </vr-row>
