Activate Enter Key Press option
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43391

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -724,6 +724,9 @@ vr-section[contentbox] .panel-body {
 .modal-dialog vr-form .action-bar {
     border-radius: 15px !important;
 }
+vr-actionbar[formsubmitsection] .action-bar {
+    border-radius: 0px !important;
+}
 .leavecolor {
     background-color: transparent !important;
 }
