--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartBranchExtendedInfoRuntimeTemplate.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartBranchExtendedInfoRuntimeTemplate.html
@@ -10,6 +10,9 @@
             <vr-textbox value="scopeModel.cNIC" label="CNIC"></vr-textbox>
         </vr-columns>
         <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.gpSiteId" label="GP Id"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
             <vr-datetimepicker type="date" value="scopeModel.cNICExpiryDate" label="CNIC Expiry Date"></vr-datetimepicker>
         </vr-columns>
         <vr-columns width="1/2row">
